--- a/historicData.ipynb
+++ b/historicData.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -593,27 +593,36 @@
        "Simple Man                         17\n",
        "The Temple Of The King             14\n",
        "Diamonds And Rust                  14\n",
-       "                                   ..\n",
-       "Always                              1\n",
-       "Rainy Day In The Sun                1\n",
-       "A Little Of Me                      1\n",
-       "Stronger                            1\n",
-       "Cajun Moon                          1\n",
-       "Name: master_metadata_track_name, Length: 5604, dtype: int64"
+       "Heart Of Gold                      14\n",
+       "More Than Words                    13\n",
+       "The Way You Look Tonight           13\n",
+       "Easy                               13\n",
+       "At Last                            13\n",
+       "Stairway to Heaven - Remaster      12\n",
+       "A Horse with No Name               12\n",
+       "Drive                              12\n",
+       "Your Song                          12\n",
+       "Everybody's Talkin'                12\n",
+       "Unchained Melody                   12\n",
+       "Knockin' On Heaven's Door          11\n",
+       "If You Could Read My Mind          11\n",
+       "Julia                              11\n",
+       "Leaf And Stream                    11\n",
+       "Name: master_metadata_track_name, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['master_metadata_track_name'].value_counts()"
+    "df['master_metadata_track_name'].value_counts().head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -624,22 +633,31 @@
        "The Killers            78\n",
        "Percy Faith            55\n",
        "The Rolling Stones     54\n",
-       "                     ... \n",
-       "Charlie Cunningham      1\n",
-       "Sabrina Claudio         1\n",
-       "Jonathan Roy            1\n",
-       "Skylar Grey             1\n",
-       "LCD Soundsystem         1\n",
-       "Name: master_metadata_album_artist_name, Length: 3099, dtype: int64"
+       "Al Stewart             47\n",
+       "Norah Jones            46\n",
+       "Dire Straits           46\n",
+       "Elton John             45\n",
+       "Ludovico Einaudi       43\n",
+       "Martin Garrix          42\n",
+       "Sade                   42\n",
+       "The Beatles            42\n",
+       "Iron Maiden            41\n",
+       "Joan Baez              40\n",
+       "Led Zeppelin           39\n",
+       "Scorpions              38\n",
+       "Fleetwood Mac          37\n",
+       "Bruce Springsteen      36\n",
+       "Eagles                 36\n",
+       "Name: master_metadata_album_artist_name, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['master_metadata_album_artist_name'].value_counts()"
+    "df['master_metadata_album_artist_name'].value_counts().head(20)"
    ]
   },
   {
