--- a/historicData.ipynb
+++ b/historicData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "[9419 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,16 +346,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['dt'] = pd.to_datetime(df['ts'])"
+    "df['ts'] = pd.to_datetime(df['ts'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,13 +387,12 @@
        "      <th>reason_end</th>\n",
        "      <th>shuffle</th>\n",
        "      <th>skipped</th>\n",
-       "      <th>dt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2013-11-18T10:40:26Z</td>\n",
+       "      <td>2013-11-18 10:40:26+00:00</td>\n",
        "      <td>Madness</td>\n",
        "      <td>Our House</td>\n",
        "      <td>Utter Madness</td>\n",
@@ -401,11 +400,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2013-11-18 10:40:26+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2013-11-18T10:42:29Z</td>\n",
+       "      <td>2013-11-18 10:42:29+00:00</td>\n",
        "      <td>El DeBarge</td>\n",
        "      <td>Rhythm Of The Night</td>\n",
        "      <td>The Magic Of Motown</td>\n",
@@ -413,11 +411,10 @@
        "      <td>unknown</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2013-11-18 10:42:29+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2013-11-18T10:45:00Z</td>\n",
+       "      <td>2013-11-18 10:45:00+00:00</td>\n",
        "      <td>Fujiya &amp; Miyagi</td>\n",
        "      <td>Spilt Milk</td>\n",
        "      <td>Ventriloquizzing</td>\n",
@@ -425,11 +422,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2013-11-18 10:45:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2013-11-18T10:45:53Z</td>\n",
+       "      <td>2013-11-18 10:45:53+00:00</td>\n",
        "      <td>Fujiya &amp; Miyagi</td>\n",
        "      <td>Tinsel &amp; Glitter</td>\n",
        "      <td>Ventriloquizzing</td>\n",
@@ -437,11 +433,10 @@
        "      <td>unknown</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2013-11-18 10:45:53+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2013-11-18T10:48:05Z</td>\n",
+       "      <td>2013-11-18 10:48:05+00:00</td>\n",
        "      <td>Solar Fields</td>\n",
        "      <td>Sol</td>\n",
        "      <td>Movements</td>\n",
@@ -449,7 +444,6 @@
        "      <td>endplay</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2013-11-18 10:48:05+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -461,11 +455,10 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9414</th>\n",
-       "      <td>2022-12-18T15:16:24Z</td>\n",
+       "      <td>2022-12-18 15:16:24+00:00</td>\n",
        "      <td>Snowy White</td>\n",
        "      <td>Slabo Day</td>\n",
        "      <td>After Paradise</td>\n",
@@ -473,11 +466,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2022-12-18 15:16:24+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9415</th>\n",
-       "      <td>2022-12-18T15:20:52Z</td>\n",
+       "      <td>2022-12-18 15:20:52+00:00</td>\n",
        "      <td>Bruce Springsteen</td>\n",
        "      <td>Streets of Philadelphia - Single Edit</td>\n",
        "      <td>Greatest Hits</td>\n",
@@ -485,11 +477,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2022-12-18 15:20:52+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9416</th>\n",
-       "      <td>2022-12-18T15:22:56Z</td>\n",
+       "      <td>2022-12-18 15:22:56+00:00</td>\n",
        "      <td>Tim Hardin</td>\n",
        "      <td>How Can We Hang On To A Dream</td>\n",
        "      <td>Tim Hardin 1</td>\n",
@@ -497,11 +488,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2022-12-18 15:22:56+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9417</th>\n",
-       "      <td>2022-12-18T16:40:22Z</td>\n",
+       "      <td>2022-12-18 16:40:22+00:00</td>\n",
        "      <td>J.J. Cale</td>\n",
        "      <td>After Midnight</td>\n",
        "      <td>Naturally</td>\n",
@@ -509,11 +499,10 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2022-12-18 16:40:22+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9418</th>\n",
-       "      <td>2022-12-18T16:40:22Z</td>\n",
+       "      <td>2022-12-18 16:40:22+00:00</td>\n",
        "      <td>Vaya Con Dios</td>\n",
        "      <td>What's a Woman</td>\n",
        "      <td>Night Owls</td>\n",
@@ -521,26 +510,25 @@
        "      <td>trackdone</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2022-12-18 16:40:22+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9419 rows × 9 columns</p>\n",
+       "<p>9419 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        ts master_metadata_album_artist_name  \\\n",
-       "0     2013-11-18T10:40:26Z                           Madness   \n",
-       "1     2013-11-18T10:42:29Z                        El DeBarge   \n",
-       "2     2013-11-18T10:45:00Z                   Fujiya & Miyagi   \n",
-       "3     2013-11-18T10:45:53Z                   Fujiya & Miyagi   \n",
-       "4     2013-11-18T10:48:05Z                      Solar Fields   \n",
-       "...                    ...                               ...   \n",
-       "9414  2022-12-18T15:16:24Z                       Snowy White   \n",
-       "9415  2022-12-18T15:20:52Z                 Bruce Springsteen   \n",
-       "9416  2022-12-18T15:22:56Z                        Tim Hardin   \n",
-       "9417  2022-12-18T16:40:22Z                         J.J. Cale   \n",
-       "9418  2022-12-18T16:40:22Z                     Vaya Con Dios   \n",
+       "                            ts master_metadata_album_artist_name  \\\n",
+       "0    2013-11-18 10:40:26+00:00                           Madness   \n",
+       "1    2013-11-18 10:42:29+00:00                        El DeBarge   \n",
+       "2    2013-11-18 10:45:00+00:00                   Fujiya & Miyagi   \n",
+       "3    2013-11-18 10:45:53+00:00                   Fujiya & Miyagi   \n",
+       "4    2013-11-18 10:48:05+00:00                      Solar Fields   \n",
+       "...                        ...                               ...   \n",
+       "9414 2022-12-18 15:16:24+00:00                       Snowy White   \n",
+       "9415 2022-12-18 15:20:52+00:00                 Bruce Springsteen   \n",
+       "9416 2022-12-18 15:22:56+00:00                        Tim Hardin   \n",
+       "9417 2022-12-18 16:40:22+00:00                         J.J. Cale   \n",
+       "9418 2022-12-18 16:40:22+00:00                     Vaya Con Dios   \n",
        "\n",
        "                 master_metadata_track_name master_metadata_album_album_name  \\\n",
        "0                                 Our House                    Utter Madness   \n",
@@ -555,23 +543,23 @@
        "9417                         After Midnight                        Naturally   \n",
        "9418                         What's a Woman                       Night Owls   \n",
        "\n",
-       "     reason_start reason_end  shuffle  skipped                        dt  \n",
-       "0         unknown  trackdone    False      0.0 2013-11-18 10:40:26+00:00  \n",
-       "1       trackdone    unknown    False      1.0 2013-11-18 10:42:29+00:00  \n",
-       "2         unknown  trackdone    False      0.0 2013-11-18 10:45:00+00:00  \n",
-       "3       trackdone    unknown    False      1.0 2013-11-18 10:45:53+00:00  \n",
-       "4         unknown    endplay    False      1.0 2013-11-18 10:48:05+00:00  \n",
-       "...           ...        ...      ...      ...                       ...  \n",
-       "9414    trackdone  trackdone    False      NaN 2022-12-18 15:16:24+00:00  \n",
-       "9415    trackdone  trackdone    False      NaN 2022-12-18 15:20:52+00:00  \n",
-       "9416    trackdone  trackdone    False      NaN 2022-12-18 15:22:56+00:00  \n",
-       "9417    trackdone  trackdone    False      NaN 2022-12-18 16:40:22+00:00  \n",
-       "9418    trackdone  trackdone    False      NaN 2022-12-18 16:40:22+00:00  \n",
+       "     reason_start reason_end  shuffle  skipped  \n",
+       "0         unknown  trackdone    False      0.0  \n",
+       "1       trackdone    unknown    False      1.0  \n",
+       "2         unknown  trackdone    False      0.0  \n",
+       "3       trackdone    unknown    False      1.0  \n",
+       "4         unknown    endplay    False      1.0  \n",
+       "...           ...        ...      ...      ...  \n",
+       "9414    trackdone  trackdone    False      NaN  \n",
+       "9415    trackdone  trackdone    False      NaN  \n",
+       "9416    trackdone  trackdone    False      NaN  \n",
+       "9417    trackdone  trackdone    False      NaN  \n",
+       "9418    trackdone  trackdone    False      NaN  \n",
        "\n",
-       "[9419 rows x 9 columns]"
+       "[9419 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +599,7 @@
        "Name: master_metadata_track_name, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +639,7 @@
        "Name: master_metadata_album_artist_name, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
